# murkelhausen_app3

./: .gitignore  CLAUDE.md  Dockerfile  README.md  create_release.sh  db.sqlite3  docker-compose.yml  entrypoint-worker.sh  entrypoint.sh  framework_comparison.md  manage.py  migration-decisions-django-tasks.md  migration-plan-django-tasks.md  pyproject.toml
.github/actions/semver/: Dockerfile  semver_tagging.py
.github/workflows/: main.yml  tagging.yml
core/: apps.py  context_processors.py  random_number.txt  scheduler.py  urls.py  views.py  worker.py
core/management/commands/: enqueue_garmin_load.py
core/templates/: base.html
core/templates/core/: calendar.html  calendar_content.html  football_games.html  football_games_content.html  handball_games.html  handball_games_content.html  home.html  muelltermine.html  muelltermine_content.html  random_number_content.html  tasks.html  tasks_content.html  vertretungsplan.html  vertretungsplan_content.html  weather.html  work_calendar.html  work_calendar_content.html
family_intranet/: asgi.py  otel.py  settings.py  urls.py  wsgi.py
family_intranet/jobs/: heartbeat.py
family_intranet/jobs/garmin/: auth.py  client.py  db.py  loaders.py  models.py  runner.py
family_intranet/repositories/: fussballde.py  google_calendar.py  gymbroich.py  handballnordrhein.py  mheg.py  outlook_calendar.py  owm.py  owm_functions.py  owm_models.py  pihole.py  pushover.py
